# Agent-Harness

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  PROJECT_CONTEXT.md  README.md  SECURITY.md  _doc_cleanup.py  _fix_changelog.py  project_context_revisions.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
AgentHarness/: _fix_changelog.py
Founder_Docs/: corrections_summary.md  project_proposal.md
cassettes/: refund_limit_guard.json
docs/: README.md  demo.md  index.html  index.md  quickstart.md
docs/compliance/: colorado_sb24_205.md  eu_ai_act_mapping.md  nist_rmf_mapping.md
docs/images/: README.md
examples/01_customer_support_langgraph/: README.md  conftest.py  test_refund_agent.py
examples/01_customer_support_langgraph/scenarios/: happy_path.yaml  ineligible_order.yaml  loop_guard.yaml  mutual_exclusion.yaml  refund_limit_guard.yaml
examples/01_customer_support_langgraph/support/: __init__.py  executor.py  refund_tools.py  trace_builder.py
examples/02_cloud_ops_openai/: README.md
examples/03_sales_outreach_crewai/: README.md
examples/04_record_replay_demo/: README.md
examples/05_compliance_eu_ai_act/: README.md
examples/06_live_mode_demo/: README.md
scenarios/: refund_happy_path.yaml
scenarios/safety/: refund_limit_guard.yaml
scripts/: run_examples.sh  setup_dev.sh
src/agentharness/: __init__.py  pytest_plugin.py  scenario.py
src/agentharness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentharness/adapters/: __init__.py  anthropic_sdk.py  autogen.py  base.py  crewai.py  langgraph.py  openai_sdk.py
src/agentharness/assertions/: __init__.py  argument.py  base.py  judge.py  resource.py  safety.py  structural.py
src/agentharness/cli/: __init__.py  __main__.py  main.py  record.py  report.py  run.py  watch.py
src/agentharness/compliance/: __init__.py  colorado.py  eu_ai_act.py  nist_rmf.py
src/agentharness/core/: __init__.py  environment.py  registry.py  result.py  runner.py  scenario.py  trace.py
src/agentharness/live/: __init__.py  approvals.py  controller.py  terminal_ui.py  watcher.py  web_server.py
src/agentharness/mocks/: __init__.py  cassette.py  fault.py  http_mock.py  interceptor.py
src/agentharness/reporting/: __init__.py  console.py  diff.py  html_report.py  json_report.py
src/agentharness/scorers/: __init__.py  base.py  composite.py  cost_normalized.py  safety_adherence.py  task_success.py  tool_correctness.py
src/agentharness/telemetry/: __init__.py  collector.py  exporter.py  jsonl.py  schema.py
tests/: conftest.py
tests/unit/: test_argument_assertions.py  test_assert_called_before.py  test_cassette.py  test_cli_record.py  test_cli_run.py  test_collector.py  test_console_reporter.py  test_diff.py  test_langgraph_intercept.py  test_pytest_plugin.py  test_replay.py  test_resource_assertions.py  test_safety_assertions.py  test_sprint1_exit_criteria.py  test_structural_batch.py  test_trace_jsonl.py  test_trace_models.py
